--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ home = [ "HTML", "RSS", "JSON"]
   
 [Languages]
 [Languages.en]
-title = "AWS System Manager"
+title = "Serverless - Setting up SSL for your serverless app"
 weight = 1
 languageName = "English"
 
@@ -29,7 +29,7 @@ url = "https://www.facebook.com/groups/awsstudygroupfcj/"
 weight = 20
 
 [Languages.vi]
-title = "AWS System Manager"
+title = "Serverless - Setting up SSL for your serverless app"
 weight = 2
 languageName = "Tiếng Việt"
 
